# icfpc-2024

./: README.md  WRITEUP.abbradar.md  default.nix  encoder.py  flake.nix  interpreter.py  lambdaman.py  prompt.txt  pyproject.toml  sender.py  solve-efficiency9.py  solve_lambdaman.py  solve_spaceship.py  solve_spaceship.sh  spaceship.py
doc/: spec.txt
haskell/: default.nix  icfpc2024.cabal  package.yaml  shell.nix
haskell/app/: DebugEncoder.hs  DebugPrinter.hs  Interpreter.hs  JuliaInterpreter.hs  Sender.hs  StringEncoder.hs
haskell/src/ICFP/: AST.hs  Evaluate.hs  Operators.hs  Optimize.hs  Translate.hs
haskell/src/ICFP/Encoding/: Decode.hs  DecodeDebug.hs  Encode.hs  Utils.hs
haskell/src/ICFP/Evaluate/: Operators.hs
haskell/test/: Encoding.hs  Evaluation.hs  Main.hs
lambdaman/: 9.txt
spaceship/: 22.txt
