[tool.poetry]
name = "icfpc-2024"
version = "1.0"
authors = ["DNIWE :: a"]
description = "Solver for ICFPC 2024"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.369"
ruff = "^0.5.0"
mentat = "^1.0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
